Added menu bar and form area

--- a/project01/index.html
+++ b/project01/index.html
@@ -8,6 +8,23 @@
 			<h1>The Magic Life Figure Outer</h1>
 			<p>Figuring out your life for you, so you don't have to...</p>
 		</div>
+		<div id="menubar">
+			<a href="">Home</a>
+			<a href="">Interests</a>
+			<a href="">Health</a>
+			<a href="">Academic</a>
+			<a href="">Professional</a>
+			<a href="">Fun</a>
+			<a href="">Evil</a>
+		</div>
+		<div id="form_area">
+			<h2>Lorem Ipsum Dolor Sit Amet.</h2>
+			<form name="submission" action="index.js" onsubmit="return validate()">
+			<label>How do you feel today?</label>
+			<input type="text" name="today"/>
+			<label>How would you like to feel? (Choose all that apply)</label>
+			<input type="text" name="tomorrow"/>
+			<input type="submit" value="Feel me!"/>
 		</div>
 			
 	</body>
