--- a/project01/index.html
+++ b/project01/index.html
@@ -19,13 +19,13 @@
 		</div>
 		<div id="form_area">
 			<h2>Lorem Ipsum Dolor Sit Amet.</h2>
-			<form name="submission" action="index.js" onsubmit="return validate()">
+			<form name="submission" onsubmit="return validate()">
 			<label>How do you feel today?</label>
 			<input type="text" name="today"/>
 			<label>How would you like to feel? (Choose all that apply)</label>
 			<input type="text" name="tomorrow"/>
 			<input type="submit" value="Feel me!"/>
 		</div>
-			
+		<script src="index.js" type="text/javascript"></script>
 	</body>
 </html>
