--- a/project01/index.html
+++ b/project01/index.html
@@ -26,6 +26,13 @@
 			<input type="text" name="tomorrow"/>
 			<input type="submit" value="Feel me!"/>
 		</div>
+		<div id="life_progress">
+			<h3>Current Progress in Life</h3>
+			<p>Mediocre. You really should enjoy life more.</p>
+		</div>
+		<div id="footer">
+			<p>&copy Borg-Like Monstrosity of Mind Control, Inc. all rights reserved.</p>
+		</div>
 		<script src="index.js" type="text/javascript"></script>
 	</body>
 </html>
