--- a/project01/index.html
+++ b/project01/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Life Figure-Outer Application</title>
+		<link href="index.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body>
 		<div id="header">
