--- a/project01/index.html
+++ b/project01/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div id="header">
-			<h1>The Magic Life Figure Outer</h1>
+			<h1>The Magic Life Figure-Outer</h1>
 			<p>Figuring out your life for you, so you don't have to...</p>
 		</div>
 		<div id="menubar">
