banner section done

--- a/project01/index.html
+++ b/project01/index.html
@@ -5,7 +5,7 @@
 		<link href="index.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body>
-		<div id="header">
+		<div id="banner">
 			<h1>The Magic Life Figure-Outer</h1>
 			<p>Figuring out your life for you, so you don't have to...</p>
 		</div>
