Menu bar done but doesnt looke quite right :(

--- a/project01/index.html
+++ b/project01/index.html
@@ -10,13 +10,15 @@
 			<p>Figuring out your life for you, so you don't have to...</p>
 		</div>
 		<div id="menubar">
-			<a href="">Home</a>
-			<a href="">Interests</a>
-			<a href="">Health</a>
-			<a href="">Academic</a>
-			<a href="">Professional</a>
-			<a href="">Fun</a>
-			<a href="">Evil</a>
+			<ul id="list">
+				<li><a href="">Home</a></li>
+				<li><a href="">Interests</a></li>
+				<li><a href="">Health</a></li>
+				<li><a href="">Academic</a></li>
+				<li><a href="">Professional</a></li>
+				<li><a href="">Fun</a></li>
+				<li><a href="">Evil</a></li>
+			</ul>
 		</div>
 		<div id="form_area">
 			<h2>Lorem Ipsum Dolor Sit Amet.</h2>
