--- a/project01/index.html
+++ b/project01/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Life Figure-Outer Application</title>
 		<link href="index.css" type="text/css" rel="stylesheet"/>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	</head>
 	<body>
 		<div id="banner">
@@ -20,21 +21,29 @@
 				<li><a href="">Evil</a></li>
 			</ul>
 		</div>
-		<div id="form_area">
-			<h2>Lorem Ipsum Dolor Sit Amet.</h2>
-			<form name="submission" onsubmit="return validate()">
-			<label>How do you feel today?</label>
-			<input type="text" name="today"/>
-			<label>How would you like to feel? (Choose all that apply)</label>
-			<input type="text" name="tomorrow"/>
-			<input type="submit" value="Feel me!"/>
-		</div>
-		<div id="life_progress">
-			<h3>Current Progress in Life</h3>
-			<p>Mediocre. You really should enjoy life more.</p>
+		<div id="main">
+			<div id="form_area">			
+				<h2>Lorem Ipsum Dolor Sit Amet.</h2>
+				<form name="submission" onsubmit="return validate()">
+					<label>How do you feel today?</label>
+					<input type="text" name="today"/>
+					<label>How would you like to feel? (Choose all that apply)</label>
+					<select size="4" name="tomorrow">
+						<option>Comfortably numb</option>
+						<option>Grumpy as poop, you jerk</option>
+						<option>Happy like I'm on controlled substances</option>
+						<option>Normal, Absolutely Normal.</option>
+					</select>
+					<input type="submit" value="Feel me!"/>
+				</form>
+			</div>
+			<div id="life_progress">
+				<h3>Current Progress in Life</h3>
+				<p>Mediocre. You really should enjoy life more.</p>
+			</div>
 		</div>
 		<div id="footer">
-			<p>&copy Borg-Like Monstrosity of Mind Control, Inc. all rights reserved.</p>
+			<p>&copy; Borg-Like Monstrosity of Mind Control, Inc. all rights reserved.</p>
 		</div>
 		<script src="index.js" type="text/javascript"></script>
 	</body>
