--- a/project01/index.html
+++ b/project01/index.html
@@ -26,7 +26,7 @@
 				<h2>Lorem Ipsum Dolor Sit Amet.</h2>
 				<form name="submission" onsubmit="return validate()">
 					<label>How do you feel today?</label>
-					<input type="text" name="today"/>
+					<input type="text" name="today"/><br/>
 					<label>How would you like to feel? (Choose all that apply)</label>
 					<select size="4" name="tomorrow">
 						<option>Comfortably numb</option>
@@ -34,6 +34,7 @@
 						<option>Happy like I'm on controlled substances</option>
 						<option>Normal, Absolutely Normal.</option>
 					</select>
+					<br/>
 					<input type="submit" value="Feel me!"/>
 				</form>
 			</div>
