finished form page

--- a/project02/form.html
+++ b/project02/form.html
@@ -8,9 +8,15 @@
 	<form action="/list" method="GET">
 		<Label for="order">Sort By</label>
 		<select name="order">
-			<option value="1">Rank</option>
-			
+			<option value="rank">Rank</option>
+			<option value="name">Name</option>
+			<option value="year">Year</option>
 		</select>
+		<Label for="rank">
+		<select name="rank">
+		
+		</select>
+		<input type="submit" value="Display List"/>
 	</form>
 </body>
 </html>
