form looks good, working on list

--- a/project02/form.html
+++ b/project02/form.html
@@ -12,11 +12,7 @@
 			<option value="name">Name</option>
 			<option value="year">Year</option>
 		</select>
-		<Label for="rank">
+		<Label for="rank">Select a Rank to highlight</label>
 		<select name="rank">
+			
 		
-		</select>
-		<input type="submit" value="Display List"/>
-	</form>
-</body>
-</html>
