--- a/project02/form.html
+++ b/project02/form.html
@@ -4,7 +4,7 @@
 	<title>Top 100 Titles</title>
 </head>
 <body>
-	<h1>Rolling Stone's Top 100 Albums of all Time</h1>
+	<h1>Rolling Stone's Top 100 Albums of All Time</h1>
 	<form action="/list" method="GET">
 		<Label for="order">Sort By</label>
 		<select name="order">
