--- a/project02/list.html
+++ b/project02/list.html
@@ -4,8 +4,6 @@
 	<title>Top 100 Titles</title>
 </head>
 <body>
-	<h1>Rolling Stone's Top 100 Albums of all Time</h1>
+	<h1>Rolling Stone's Top 100 Albums of All Time</h1>
 	<table name="albums">
-	</table>
-</body>
-</html>
+	
