hey look! my app works :D

--- a/project02/list.html
+++ b/project02/list.html
@@ -2,6 +2,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<title>Top 100 Titles</title>
+	<link href="list.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 	<h1>Rolling Stone's Top 100 Albums of All Time</h1>
